--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -2,8 +2,19 @@
     <div class="navbar bg-primary shadow-sm">
         <div class="navbar-brand align-item-center d-flex">
             <i style="font-size: 40px;" class="fas fa-shipping-fast">
-                <strong>Show Cart</strong>
             </i>
+            <strong style="font-size: 30px;">Shows Pill</strong>
+            <div class="form-group">
+                <input type="search" class="form-control" placeholder="Search shows">
+            </div>
+            <span class="fas fa-search search-icon"></span>
         </div>
+        <button class="btn btn-primary">
+            <a href="" routerLink="cart">
+                <i style="font-size: 30px;" class="fas fa-cart-plus">
+                    <div style="font-size: 10px;" class="badge bg-danger">0</div>
+                </i>
+            </a>
+        </button>
       </div>
 </header>
