--- a/src/app/components/products/products.component.html
+++ b/src/app/components/products/products.component.html
@@ -1,1 +1,14 @@
-<p>products works!</p>
+<div class="gallery">
+    <div class="show" *ngFor="let show of shows">
+      <img [src]="show.image" alt="{{ show.name }}">
+      <h2>{{ show.name }}</h2>
+      <p>{{ show.description }}</p>
+      <div class="tickets">
+        <div *ngFor="let ticket of show.tickets">
+          <h3>{{ ticket.name }}</h3>
+          <p>Price: {{ ticket.price }}</p>
+          <button (click)="addToCart(show, ticket)">Add to Cart</button>
+        </div>
+      </div>
+    </div>
+  </div>
