--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -9,12 +9,9 @@
             </div>
             <span class="fas fa-search search-icon"></span>
         </div>
-        <button class="btn btn-primary">
-            <a href="" routerLink="cart">
-                <i style="font-size: 30px;" class="fas fa-cart-plus">
-                    <div style="font-size: 10px;" class="badge bg-danger">0</div>
-                </i>
-            </a>
-        </button>
+        <a href="cart" class="btn btn-primary">
+          <i style="font-size: 30px; color: white; background-color: aliceblue;" class="fas fa-cart"></i>
+          <div style="font-size: 10px;" class="badge bg-danger">0</div>
+        </a>
       </div>
 </header>
