--- a/src/app/components/cart/cart.component.html
+++ b/src/app/components/cart/cart.component.html
@@ -3,7 +3,7 @@
     <!-- Delivery Card -->
     <div class="card delivery-card">
       <div class="card-header">
-        <span style="margin: 20px; margin-bottom: 49px;">Delivery</span>
+        <span style="margin: 20px; margin-bottom: 40%;">Delivery</span>
         <div class="circle">
           <span><img src="assets/images/icons8-done-48.png"></span>
         </div>
@@ -12,26 +12,28 @@
         <div>
           <header>Mobile Entry - Free</header>
         </div>
-        <p>Delivery Address: 123 Main Street</p>
-        <p>Tickets Available by Sun Apr 3, 2022
-          These mobile tickets will be transferred directly to you from a trusted seller. We'll email you instructions on how to accept them on the original ticket provider's mobile app.</p>
+        <p>
+          Tickets Available by Sun Apr 3, 2022
+          These mobile tickets will be transferred directly to you from a trusted seller.
+          We'll email you instructions on how to accept them on the original ticket provider's mobile app.
+        </p>
       </div>
     </div>
-
     <!-- Payment Card -->
     <div class="card mt-4 payment-card">
       <div class="card-header">
-        <span>Payment</span>
+        <span style="margin: 20px; margin-bottom: 40%;">Payment</span>
         <div class="circle">
           <span><img src="assets/images/icons8-done-48.png"></span>
         </div>
       </div>
+      <section class="card-body"></section>
       <div class="card-body">
         <p>Payment Method: Credit Card</p>
         <p>Use Credit/Debit Card</p>
         <section>
           <ul style="display: inline-flex; list-style: none;">
-            <li><strong>VISA</strong></li>
+            <li style="border: 1px solid white; padding: 5px;"><strong><input type="radio" name="visa" style="color: blue;">VISA</strong></li>
             <li>Visa - 9999</li>
             <ul style="display: inline-flex; list-style: none; margin: 4px;">
               <li>User Name</li> |
@@ -40,71 +42,71 @@
           </ul>
           <br>
           <br>
-          <button class ="edit">Edit</button> | <button class="delete">Delete</button><br>
+          <button class="edit" style="text-decoration: none;">Edit</button> |
+          <button class="delete" style="text-decoration: none;">Delete</button><br>
           <label>Security Code</label><br>
           <div class="custom-input">
-            <input type="password" placeholder="..." />
+            <input type="password" placeholder="..." style="text-align: center; border-radius: 5px; font-size: 30px; width: 100px;" />
+            <img src="assets/images/icons8-done-48.png" alt="Image description" class="circle" style="margin-right:5px; height:30px; width:30px;">
+          </div>
+          <span><img src="assets/images/icons8-card-50.png" alt="" style="margin-left: 10px;"><small>3-digits on back of card</small></span><br>
 
-            <img src="assets/images/icons8-done-48.png" alt="Image description" class="circle">
-          </div><br>
-
-          <img src="assets/images/plus.png" style="height: 100px; ">
-            <img src="assets/images/icons8-card-50.png">
-            <button class="primary">Add New Card</button><br>
-              3-digits on back of card<br>
-              Or Pay With<br>
-              By using a digital wallet and continuing past this page, you have read and are accepting the <a routerLink="">Terms of Use.</a>
-        </section>
-
-      </div>
+          <img src="assets/images/blue-plus.png" style="height: 50px;">
+          <img src="assets/images/icons8-card-50.png">
+          <button class="primary" style="color: blue;">Add New Card</button><br>
+        <hr>
+        Or Pay With<br>
+        By using a digital wallet and continuing past this page, you have read and are accepting the <a href="#">Terms of Use.</a>
+      </section>
     </div>
   </div>
-  <div class="col-md-6 text-right">
-    <!-- Total Card -->
-    <div class="card total-card">
-      <div class="card-header">
-        Total <span class="result">$549.11</span>
-      </div>
-      <div class="card-body">
-        <p>Tickets</p>
-        <p>
-          <span>Resale Tickets: $229.00 x 2</span>
-          <span class="result">$458.00</span>
-        </p>
-        <p>
-          xfr XFER Proof of at least one dose of COVID-19 vaccination for ages 5 to 11 and guests ages 12 and up will be required to show proof of two COVID-19 vaccine doses or one dose of the Johnson & Johnson vaccine. Masks must be worn.
-        </p>
-        <p><strong>Fee</strong></p>
-        <p>
-          <span>Service Fee: $44.08 x 2</span>
-          <span class="result">$88.16</span>
-        </p>
-        <p>
-          <span>Order Processing Fee</span>
-          <span class="result">$2.95</span>
-        </p>
-        <p><strong>Delivery</strong></p>
-        <p>
-          <span>Mobile Entry</span>
-          <span class="result">Free</span>
-        </p>
-        <a routerLink="#">Cancel Order</a>
-        <ul>
-          <li>*All Sales Final - No Refunds</li>
-          <li>
-            <label class="check-button">
-              <input type="checkbox">
-              <span class="check-mark"></span>
-            </label>I have read and agree to the current Terms of Use.
-              Place Order
-          </li>
-        </ul>
-
-
-
-      </div>
+</div>
+<div class="col-md-6">
+  <!-- Total Card -->
+  <div class="card total-card">
+    <div class="card-header">
+      Total <span class="result">$549.11</span>
     </div>
-    <button class="primary">Place Order</button>
-    <small>*Exceptions may apply, see our Terms of Use.</small>
+    <div class="card-body">
+      <p><strong>Tickets</strong></p>
+      <p>
+        <span>Resale Tickets: $229.00 x 2</span>
+        <span class="result">$458.00</span>
+      </p>
+      <p>
+        <strong>Notes From Seller</strong>
+      </p>
+      <p>
+        xfr XFER Proof of at least one dose of COVID-19 vaccination for ages 5 to 11 and guests ages 12 and up will be required to show proof of two COVID-19 vaccine doses or one dose of the Johnson & Johnson vaccine. Masks must be worn.
+      </p>
+      <p><strong>Fee</strong></p>
+      <p>
+        <span>Service Fee: $44.08 x 2</span>
+        <span class="result">$88.16</span>
+      </p>
+      <p>
+        <span>Order Processing Fee</span>
+        <span class="result">$2.95</span>
+      </p>
+      <p><strong>Delivery</strong></p>
+      <p>
+        <span>Mobile Entry</span>
+        <span class="result">Free</span>
+      </p>
+      <a href="#" style="text-decoration: none;">Cancel Order</a>
+      <ul style="display: inline; list-style: none;">
+        <li>*All Sales Final - No Refunds</li>
+        <li>
+          <label class="check-button">
+            <input type="checkbox">
+            <span class="check-mark"></span>
+          </label>
+          I have read and agree to the current <a href="#" style="text-decoration: none;">Terms of Use.</a>
+        </li>
+      </ul>
+      <button class="primary">Place Order</button>
+      <small>*Exceptions may apply, see our Terms of Use.</small>
+    </div>
   </div>
+</div>
 </div>
