--- a/src/app/components/cart/cart.component.scss
+++ b/src/app/components/cart/cart.component.scss
@@ -1,9 +1,33 @@
+@media screen and (max-width: 768px) {
+  .col-md-6 {
+    flex: 0 0 100%;
+    max-width: 100%;
+  }
+}
+
 .row {
   display: flex;
   flex-wrap: wrap;
   margin-right: -15px;
   margin-left: -15px;
+  justify-content: space-between;
 }
+
+.card-body {
+  padding: 10px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+
+.result {
+  text-align: right;
+  margin-left: auto;
+}
+
+
+
+
 
 .col-md-6 {
   flex: 0 0 50%;
@@ -27,9 +51,7 @@
   font-weight: bold;
 }
 
-.card-body {
-  padding: 10px;
-}
+
 
 header {
   font-size: 18px;
@@ -57,17 +79,17 @@ p {
   border: none;
   padding: 10px 20px;
   border-radius: 0; /* Remove border radius */
-  cursor: auto;
+  cursor: pointer;
 }
 
 .text-right {
   text-align: left; /* Align text to the left */
 }
-.result{
+.result {
   text-align: right;
-  margin-left: 70%;
-  align-items:flex-end;
+  margin-left: auto; /* Updated */
 }
+
 .custom-input {
   position: relative;
   display: inline-block;
@@ -98,3 +120,5 @@ p {
   border-radius: 50%;
   height: 20px;
 }
+
+
